fixed a minor issue with home.js alignment

--- a/src/style.css
+++ b/src/style.css
@@ -49,9 +49,15 @@ font-weight: bold;
   display: flex;
   justify-content: center;
   align-items: center;
-    width: 800px;
-    padding-top: 40px;
-    gap: 40px;
+  width: 800px;
+  padding-top: 40px;
+  gap: 40px;
+  }
+  .homeContent div{
+
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 img{
   height:500px;
